[package]
name = "mvc-rs"
version = "0.1.0" # change with html_root_url in lib.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "mvc traits for Rust"
keywords = ["model", "view", "controller"]
categories = ["development-tools"]
license = "MIT"

documentation = "https://docs.rs/mvc-rs/"
homepage = "https://crates.io/crates/mvc-rs"
repository = "https://github.com/nomissbowling/mvc-rs"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
